--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,21 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Harsh Upadhye Portfolio"/>
+      <style>
+        @font-face {
+          font-family: Gumela ;
+          src: url('../src/fonts/Gumela\ Regular.otf');
+        }
+        *{
+          font-family: 'Gumela';
+          font-weight: normal;
+          font-size: 20px;
+        }
+        body{
+          margin: 0;
+        }
+      </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -21,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Harsh Upadhye Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
