--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link type="icon" href="https://st3.depositphotos.com/3867453/13387/v/600/depositphotos_133874206-stock-illustration-letter-h-logo-icon-design.jpg"/>
+    <link rel="icon" type="image/x-icon" href="https://www.freeiconspng.com/uploads/letter-h-icon-png-32.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
